Před Posledním Šlerkovým Okem

--- a/prispevky/000-uvod/main.tex
+++ b/prispevky/000-uvod/main.tex
@@ -1,7 +1,7 @@
 \addcontentsline{toc}{chapter}{Úvod}
 \chapter*{Úvod}
 
-\textit{Tomáš Diviák, Martin \v Sm\'\i d, René Levínský, BISOP, září 2021}
+\textit{Tomáš Diviák, Martin \v Sm\'\i d, René Levínský, BISOP, prosinec 2021}
 \vspace{15mm}
 
 \noindent Během 21. století se ve světě objevila řada velice nebezpečných a potenciálně pandemických onemocnění. Byly jimi například ptačí chřipka, prasečí chřipka, SARS či ebola. Žádná z~těchto epidemií však Českou republiku výrazně nezasáhla, a česká veřejnost tak mohla nabýt dojmu, že se jí takovéto situace netýkají a nejsou pro ni závažným rizikem. To se ale zásadně změnilo na přelomu roku 2019 a 2020, když se z~čínského města Wu-chan začal rapidně šířit koronavirus SARS-CoV-2 způsobující respirační onemocnění, pro něž se brzy ujal název covid-19.
@@ -27,7 +27,7 @@ Spojením „trasovací“ a „modelovací“ skupiny pak v~létě 2020 vzniklo
  Co se týče striktního prosazování vědeckého přístupu a otázky promoření, dává čas členům BISOP postupně za pravdu: různá „alternativní fakta“, jako například tvrzení o~zázračnosti ivermektinu nebo o~škodlivosti roušek, jsou postupně vyvracena a také se ukazuje, že zavádění opatření až v~okamžiku zahlcení zdravotnictví vedlo ke zbytečným ekonomickým a lidským ztrátám. Kritiku „rychlé vědy“ je však potřeba nebrat na lehkou váhu a v~konkrétních situacích vždy zvažovat, zda čekat na nezpochybnitelné ověření nebo zda jednat. V~situaci roku 2020, kdy měla vláda tendenci naslouchat výše zmíněným „alternativám“, byla druhá možnost evidentně tou správnou volbou.
 
 
- Kniha, kterou držíte v~ruce, je sborníkem příspěvků z~konference Poučení z~pandemie COVID-19 konané v~polovině června 2021\footnote{\url{https://www.bisop.eu/konference-pouceni-z-pandemie-covid-19/}}. Tento sborník tak mapuje mnoho dimenzí pandemie prostřednictvím vědeckého pohledu na ně. Přesněji řečeno, mapuje východiska a výsledky práce BISOP od počátku pandemie do léta 2021. Jedná se tak o~příspěvek do diskuse k~tématu, o~němž bylo vyprodukováno bezprecedentní množství informací (a dezinformací). V~této záplavě informací může být složité se zorientovat, a proto se celý tento sborník snaží čtenáře z řad laické i odborné veřejnosti srozumitelnou formou seznámit jak s~obecnými metodami a poznatky vážícími se ke covidu-19 a epidemiím, tak s~výsledky konkrétních studií zaměřujících se na specifické případy, s~nimiž byla Česká republika během pandemie konfrontována.
+ Kniha, kterou držíte v~ruce, je sborníkem příspěvků z~konference Poučení z~pandemie COVID-19 konané v~polovině června 2021\footnote{\url{https://www.bisop.eu/konference-pouceni-z-pandemie-covid-19/}}. Mapuje východiska a výsledky práce BISOP od počátku pandemie do léta 2021. Jedná se tak o~příspěvek do diskuse k~tématu, o~němž bylo vyprodukováno bezprecedentní množství informací (a dezinformací). V~této záplavě informací může být složité se zorientovat, a proto se celý tento sborník snaží čtenáře z řad laické i odborné veřejnosti srozumitelnou formou seznámit jak s~obecnými metodami a poznatky vážícími se ke covidu-19 a epidemiím, tak s~výsledky konkrétních studií zaměřujících se na specifické případy, s~nimiž byla Česká republika během pandemie konfrontována.
 
 
  Jednotlivé příspěvky jsou rozčleněny do tří částí. Příspěvky v~první části sborníku se soustředí na obecnější metody a východiska vědeckého chápání epidemií a na základní poznatky o~koronaviru SARS-CoV-2. První třetina sborníku tak slouží i jako úvod umožňující čtenářům plnou orientaci ve zbývajících kapitolách. Druhá a také nejobsáhlejší třetina kapitol představuje aplikace jednotlivých modelů a přístupů v~nejrůznějších situacích týkajících se pandemie a jejího zvládání v~Česku. Závěrečná třetí část pak nabízí zhodnocení dopadů pandemie a úvahy nad výhledy do budoucna nejen v~pandemii, ale i po ní.
