--- a/prispevky/100-Skoly/main.tex
+++ b/prispevky/100-Skoly/main.tex
@@ -94,7 +94,7 @@ Struktura kontaktů mezi žáky se v~lecčems liší od struktury kontaktů mezi
 Kombinace propojenosti obou úrovní kontaktů, centralizace úrovně kontaktů mezi učiteli a zároveň jejich pozice propojující obě úrovně prostřednictvím vyučování v~různých třídách vystavuje učitele riziku nakažení a zároveň také rychlého přenosu nákazy. 
 
     
-\section*{Simulace opatření.} 
+\section*{Simulace opatření} 
 
 \begin{table}
     \centering
