--- a/prispevky/Epilog/main.tex
+++ b/prispevky/Epilog/main.tex
@@ -7,7 +7,7 @@
 
 \noindent Hlavní motivací vzniku iniciativ, jako byl Model AntiCOVID-19 pro ČR (později BISOP) či dalších podobných byla snaha o~něco, čemu se anglicky říká evidence-based policy, česky politika založená na faktech, přičemž zmíněná fakta (evidence) mají pocházet z~uznávaného vědeckého výzkumu. Jinak řečeno, politická rozhodnutí by měla mít oporu ve vědě, nikoli jen v~ideologii či okamžitých zájmech. 
 
-K~lednu 2022 byla Česká republika třetí nejhorší z~evropských zemí, a to jak co se týče počtu případů na 100 tisíc obyvatel, \footnote{\url{https://www.statista.com/statistics/1110187/coronavirus-incidence-europe-by-country/}} tak co se týče počtu úmrtí spojených s~covidem,\footnote{\url{https://www.statista.com/statistics/1111779/coronavirus-death-rate-europe-by-country/}} v~první třech měsících roku 2021 byla postupně na třetím, druhém a prvním místě v~počtu nadúmrtí. \footnote{\url{https://ec.europa.eu/eurostat/databrowser/view/DEMO_MEXRT__custom_309801/bookmark/table?lang=en&bookmarkId=22df2744-9f37-4f0e-831f-bfe32824397d}} V~tomto kontextu není nijak nadsazené mluvit o~selhání a přirozeně vyvstává otázka po jeho příčinách. 
+K~lednu 2022 byla Česká republika třetí nejhorší z~evropských zemí, a to jak co se týče počtu případů na 100 tisíc obyvatel,\footnote{\url{https://www.statista.com/statistics/1110187/coronavirus-incidence-europe-by-country/}} tak co se týče počtu úmrtí spojených s~covidem,\footnote{\url{https://www.statista.com/statistics/1111779/coronavirus-death-rate-europe-by-country/}} v~první třech měsících roku 2021 byla postupně na třetím, druhém a prvním místě v~počtu nadúmrtí.\footnote{\url{https://ec.europa.eu/eurostat/databrowser/view/DEMO_MEXRT__custom_309801/bookmark/table?lang=en&bookmarkId=22df2744-9f37-4f0e-831f-bfe32824397d}} V~tomto kontextu není nijak nadsazené mluvit o~selhání a přirozeně vyvstává otázka po jeho příčinách. 
 
 
 Jako možný důvod tohoto stavu se přirozeně nabízí absence politiky založené na faktech. Věc je však složitější. Nedá se totiž říci, že by se tehdejší vláda Andreje Babiše, známá svou proklamovanou neideologičností a pragmatismem, tomuto principu bránila. V~počátcích pandemie se díky jednoduchému matematickému modelu Pavla Řeháka premiér nechal přesvědčit k~zavedení opatření, která vedla k~účinnému potlačení první vlny epidemie. S~přibývající nespokojeností obyvatel se zavedenými opatřeními sice ochota vlády k~ráznějším opatřením oslabovala, ale i to bylo často ospravedlňováno názory expertů, jakkoli šlo o~\uv{disentní} názory, které se později ukázaly jako problematické. A~vždy, když se situace začala zhoršovat a hrozilo zahlcení zdravotnictví, vláda se znovu obrátila na \uv{mainstreamové} vědce.
@@ -24,7 +24,7 @@ To, že promořování k~proklamovanému návratu do normálu nevede, je ve svě
 
 Hlavní proud epidemiologie, u~nás kromě centra BISOP reprezentovaný sdružením MeSES či Iniciativou Sníh, během prvního roku pandemie poměrně jednoznačně prosazoval cestu omezování viru, byť byly jeho hlavní argumenty spíše etické (posláním lékaře je léčit) či lékařské (poukazující na zdravotní rizika nemoci), přičemž panovalo optimistické očekávání, že pandemii zastaví dostatečná proočkovanost. I~když se ve světle zjištění, že účinnost současných vakcín v~čase poměrně rychle klesá, koncept omezování viru  poněkud zrelativizoval, zpětně se i tak jeví jako správný, protože většímu počtu lidí umožnil dožít se možnosti ochrany hybridní imunitou. 
 
-Je dobré si všimnout faktu, že strategii promořování (alespoň v~naší zemi) nikdo z~oficiálních představitelů veřejně nepropagoval, snad jen s~výjimkou tehdejšího náměstka ministra zdravotnictví Romana Prymuly, což ovšem premiér Babiš odmítl s~odůvodněním, že je to \uv{příliš riskantní}. \footnote{\url{https://www.novinky.cz/domaci/clanek/babis-se-postavil-za-hamacka-nesouhlasi-s-prymulou-ohledne-promoreni-40319551}}. Promořování otevřeně nepodporovali ani \uv{vědečtí disidenti}, tedy oponenti hlavního proudu z~řad vědecké obce. Ti kteří se omezili na všemožnou kritiku oficiálního postupu, ať už šlo o~přeceňování stavu kolektivní imunity,\footnote{\url{https://www.idnes.cz/zpravy/domaci/koronavirus-covid-vojtech-thon-testovani-studie-promorenost.A201027_105917_veda_vov}} přeceňování možnosti léčení už propuklých případů,\footnote{\url{https://cnn.iprima.cz/expert-varuje-pred-plosnym-ockovanim-nesmi-byt-soubeh-infekce-a-vakciny-51177}} včetně propagace „zázračných“ léků jako Isoprinosin\footnote{\url{https://www.zdravotnickydenik.cz/2021/01/isoprinosine-zrejme-neni-zazracny-lek-proti-covid-19-jeho-ceskou-studii-provazi-vazna-eticka-pochybeni/}} či Ivermectin\footnote{\url{https://vtm.zive.cz/clanky/tecka-ivermectin-pred-covidem-neochrani-nekolik-vedeckych-studii-ktere-to-tvrdily-bylo-stazeno/sc-870-a-213213/default.aspx}}, zpochybňování účinnosti protiepidemických opatření\footnote{\url{https://smis-lab.cz/wp-content/uploads/2021/06/2021-06-07-Straka.pdf}} či spekulace o~skrytých nežádoucích účincích vakcín.\footnote{\url{https://www.parlamentnilisty.cz/arena/rozhovory/Tajena-data-1-umrti-po-vakcinach-hlaseno-Cesky-matematik-citi-zmar-685018}} Tyto \uv{kritické} hlasy, které se často nevyhýbají domněnkám, ve valné většině nemají potřebnou vědeckou úroveň, nejsou nijak oponovány, přitom nenabídly ke stávajícím opatřením žádnou konzistentní alternativu, snad jen s~výjimkou vágních návrhů na neomezování zdravých a ochranu zranitelných,\footnote{\url{https://plus.rozhlas.cz/ze-se-covid-siri-v-populaci-asi-nikomu-nevadi-musime-chranit-hlavne-seniory-8349293}}, což však, jak se ukázalo například ve Švédsku, v~praxi může fungovat jen těžko. 
+Je dobré si všimnout faktu, že strategii promořování (alespoň v~naší zemi) nikdo z~oficiálních představitelů veřejně nepropagoval, snad jen s~výjimkou tehdejšího náměstka ministra zdravotnictví Romana Prymuly, což ovšem premiér Babiš odmítl s~odůvodněním, že je to \uv{příliš riskantní}.\footnote{\url{https://www.novinky.cz/domaci/clanek/babis-se-postavil-za-hamacka-nesouhlasi-s-prymulou-ohledne-promoreni-40319551}} Promořování otevřeně nepodporovali ani \uv{vědečtí disidenti}, tedy oponenti hlavního proudu z~řad vědecké obce. Ti kteří se omezili na všemožnou kritiku oficiálního postupu, ať už šlo o~přeceňování stavu kolektivní imunity,\footnote{\url{https://www.idnes.cz/zpravy/domaci/koronavirus-covid-vojtech-thon-testovani-studie-promorenost.A201027_105917_veda_vov}} přeceňování možnosti léčení už propuklých případů,\footnote{\url{https://cnn.iprima.cz/expert-varuje-pred-plosnym-ockovanim-nesmi-byt-soubeh-infekce-a-vakciny-51177}} včetně propagace „zázračných“ léků jako Isoprinosin\footnote{\url{https://www.zdravotnickydenik.cz/2021/01/isoprinosine-zrejme-neni-zazracny-lek-proti-covid-19-jeho-ceskou-studii-provazi-vazna-eticka-pochybeni/}} či Ivermectin,\footnote{\url{https://vtm.zive.cz/clanky/tecka-ivermectin-pred-covidem-neochrani-nekolik-vedeckych-studii-ktere-to-tvrdily-bylo-stazeno/sc-870-a-213213/default.aspx}} zpochybňování účinnosti protiepidemických opatření\footnote{\url{https://smis-lab.cz/wp-content/uploads/2021/06/2021-06-07-Straka.pdf}} či spekulace o~skrytých nežádoucích účincích vakcín.\footnote{\url{https://www.parlamentnilisty.cz/arena/rozhovory/Tajena-data-1-umrti-po-vakcinach-hlaseno-Cesky-matematik-citi-zmar-685018}} Tyto \uv{kritické} hlasy, které se často nevyhýbají domněnkám, ve valné většině nemají potřebnou vědeckou úroveň, nejsou nijak oponovány, přitom nenabídly ke stávajícím opatřením žádnou konzistentní alternativu, snad jen s~výjimkou vágních návrhů na neomezování zdravých a ochranu zranitelných\footnote{\url{https://plus.rozhlas.cz/ze-se-covid-siri-v-populaci-asi-nikomu-nevadi-musime-chranit-hlavne-seniory-8349293}}, což však, jak se ukázalo například ve Švédsku, v~praxi může fungovat jen těžko. 
 
 Společnost se tak ocitla ve schizofrenní situaci, kdy její vláda sice navenek mluvila o~boji s~pandemií a ochraně zdraví, ve skutečnosti však proti ní dělala jen nezbytné minimum, patrně aby tak vyšla vstříc předpokládané touze společnosti po rychlém promoření. To, že by společnost dobře obhájenou a konzistentní politiku marginalizace viru nepřijala, však vůbec není jisté.
 
